# django_react_fullstack_app

./: README.md  main.py  pyproject.toml
backend/api/: models.py  serializers.py  views.py
backend/api/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: Form.jsx  From.jsx  ProtectedRoute.jsx
